--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,8 @@ body header{
 .form-control input{
     width: 100%;
     display: inline-block;
-    height: 30px;
+    height: 40px;
+    border-radius: 5px;
     font-size: 15px;
 }
 .form-control i{
@@ -51,9 +52,11 @@ body header{
     right: 2%;
     bottom:  34%;
     color: rgb(82, 81, 81);
+    visibility: hidden;
 }
 .form-control small {
     display: block;
+    visibility: hidden;
 }
 .form input[type="submit"]{
     width: 100%;
@@ -62,6 +65,12 @@ body header{
     color: white;
     font-size: 1.5rem;
     cursor: pointer;
+}
+.fail{
+    border:5px solid rgba(255, 0, 0, 0.486)
+}
+.success{
+    border:5px solid rgba(0, 224, 0, 0.541)
 }
 
 body footer{
